--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
         <ul class="nav navbar-nav ">
           <li class="active"><a href="{{url_for('index')}}">Home <span class="sr-only">(current)</span></a></li>
           <li><a href="{{url_for('explore')}}">Explore</a></li>
+          <li><a href="{{url_for('scheduler')}}">Scheduler</a></li>
         </ul>
         {% if g.search_form %}
         <form class="navbar-form navbar-left" method="get"
