--- a/templates/_schedule.html
+++ b/templates/_schedule.html
@@ -1,8 +1,8 @@
 <table class="table table-hover">
   <tr>
-    <td width="70px">
+    <td width="35px">
       <a href="{{url_for('user', username=schedule.author.username)}}">
-        <img src="{{schedule.author.avatar(70)}}" />
+        <img src="{{schedule.author.avatar(35)}}" />
       </a>
     </td>
     <td>
@@ -12,22 +12,37 @@
           </a>
         </span>
 
-      {%set T = schedule.timestamp%}
-      recorded {{moment(schedule.timestamp).fromNow()}}:(write time:{{T.strftime('%Y-%m-%d %H:%M')}})
-      <br>
-      <span id="schedule{{schedule.id}}" style="white-space:pre-line";><h3>제목 : {{schedule.title}}</h3></span>
-      <span id="schedule{{schedule.id}}"><h3>{{schedule.period_start.strftime('%Y-%m-%d %H:%M')}}
+      <span style="font-size:0.7em"><br>
+        {%set T = schedule.timestamp%}
+        recorded {{moment(schedule.timestamp).fromNow()}}:(write time:{{T.strftime('%Y-%m-%d %H:%M')}})
+      </span>
+    <td width="20px"> <!--수정버튼공간-->
+      <a href="{{url_for('edit_schedule',schedule_id=schedule.id)}}" class="btn btn-primary btn-xs" role="button" style="margin=0;padding=0;font-size:0.7em">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+         Edit
+      </a>
+    </td>
+  </tr>
+  <tr style="border-top:2px solid #fff">
+    <td width="20px">
+      Sched
+    </td>
+    <td>
+      <span id="schedule{{schedule.id}}" style="white-space:pre-line;font-size:1.4em">Title) {{schedule.title}}</span>
+      <p id="schedule{{schedule.id}}" style="font-size:0.9em;font-weight:bold">└ {{schedule.period_start.strftime('%y-%m-%d %H:%M')}}
       {% if schedule.period_start.strftime('%Y-%m-%d %H%M') == schedule.period_end.strftime('%Y-%m-%d %H%M') %}
         시작
       {% elif schedule.period_start.strftime('%Y-%m-%d') == schedule.period_end.strftime('%Y-%m-%d') %}
-        ~ {{schedule.period_end.strftime('%H:%M')}}
+        ~ {{schedule.period_end.strftime('%H:%M')}} ({{(schedule.period_end-schedule.period_start).seconds/3600}}시간)
       {% elif schedule.period_start.strftime('%Y') == schedule.period_end.strftime('%Y') %}
-        ~ {{schedule.period_end.strftime('%m-%d %H:%M')}}
+        ~ {{schedule.period_end.strftime('%m-%d %H:%M')}} (약 {{(schedule.period_end-schedule.period_start).seconds/(3600*24)}}일)
       {% else %}
-        ~ {{schedule.period_end.strftime('%Y-%m-%d %H:%M')}}
+        ~ {{schedule.period_end.strftime('%y-%m-%d %H:%M')}} (약 {{(schedule.period_end-schedule.period_start).seconds/(3600*24)}}일)
       {% endif %}
-      </h3></span>
-      <span id="schedule{{schedule.id}}" style="white-space:pre-line";> {{schedule.body}}</span>
+      </p>
+
+      <span id="schedule{{schedule.id}}" style="white-space:pre-line;font-size:0.85em";> {{schedule.body}}</span>
     </td>
+    <td></td>
   </tr>
 </table>
