--- a/templates/scheduler.html
+++ b/templates/scheduler.html
@@ -2,10 +2,13 @@
 {%import "bootstrap/wtf.html" as wtf%}
 
 {%block app_content%}
-
-  <h3>Hello, {{ current_user.username }}! You can recorde your schedules using below form!</h3>
-  {{wtf.quick_form(form)}}
-  <hr>
+<div class="row">
+  <div class="col-md-5">
+    <h4>Hello, {{ current_user.username }}! You can recorde your schedules using below form!</h4>
+      {{wtf.quick_form(form)}}
+    <hr>
+  </div>
+</div>
   <h2>
     <span class='glyphicon glyphicon-calendar' aria-hidden="true"></span>
     Your Schedules
@@ -13,22 +16,25 @@
   <hr>
 
   <!-- 일정뷰 생성 -->
+  <div class='col-md-8'>
+    {% for schedule in schedules %}
+      {%include '_schedule.html'%}
+    {% endfor %}
+  </div>
 
-  {% for schedule in schedules %}
-    {%include '_schedule.html'%}
-  {% endfor %}
 
   <!-- 페이지네비게이터 -->
   <nav aria-label="...">
     <ul class="pager">
       <li class="previous{%if not prev_url%} disabled{%endif%}">
         <a href="{{prev_url or '#'}}">
-          <span aria-hidden="true">&larr;</span> Newer posts
+          <span aria-hidden="true">&larr;</span> Newer schedules
         </a>
       </li>
+
       <li class="next{%if not next_url%} disabled{%endif%}">
         <a href="{{next_url or '#'}}">
-          Older posts <span aria-hidden="true">&rarr;</span>
+          Older schedules <span aria-hidden="true">&rarr;</span>
         </a>
       </li>
     </ul>
