--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
         </ul>
         {% if g.search_form %}
         <form class="navbar-form navbar-left" method="get"
-                action="">
+                action="{{url_for('search')}}">
             <div class="form-group">
                 {{ g.search_form.q(size=20, class='form-control',
                     placeholder=g.search_form.q.label.text) }}
