--- a/templates/cal_schedule.html
+++ b/templates/cal_schedule.html
@@ -1,39 +1,41 @@
-<table class="table table-hover">
-  <tr>
-    <td width="70px">
-      <a href="{{url_for('user', username=schedule.author.username)}}">
-        <img src="{{schedule.author.avatar(70)}}" />
-      </a>
-    </td>
-    <td>
-        <span class="user_popup">
-          <a href="{{url_for('user', username=schedule.author.username)}}">
-            {{schedule.author.username}}
-          </a>
-        </span>
 
-      {%set T = schedule.timestamp%}
-      recorded {{moment(schedule.timestamp).fromNow()}}:(write time:{{T.strftime('%Y-%m-%d %H:%M')}})
-      <br>
-      <span id="schedule{{schedule.id}}" style="white-space:pre-line";><h3>제목 : {{schedule.title}}</h3></span>
-      <span id="schedule{{schedule.id}}"><h3>{{schedule.period_start.strftime('%Y-%m-%d %H:%M')}}
-      {% if schedule.period_start.strftime('%Y-%m-%d %H%M') == schedule.period_end.strftime('%Y-%m-%d %H%M') %}
-        시작
-      {% elif schedule.period_start.strftime('%Y-%m-%d') == schedule.period_end.strftime('%Y-%m-%d') %}
-        ~ {{schedule.period_end.strftime('%H:%M')}}
-      {% elif schedule.period_start.strftime('%Y') == schedule.period_end.strftime('%Y') %}
-        ~ {{schedule.period_end.strftime('%m-%d %H:%M')}}
-      {% else %}
-        ~ {{schedule.period_end.strftime('%Y-%m-%d %H:%M')}}
-      {% endif %}
-      </h3></span>
-      <span id="schedule{{schedule.id}}" style="white-space:pre-line";> {{schedule.body}}</span>
-    </td>
-    <td width="70px"> <!--수정버튼공간-->
-      <a href="{{url_for('edit_schedule',schedule_id=schedule.id)}}">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-         Edit
-      </a>
-    </td>
-  </tr>
-</table>
+<div class="calendar-base">
+  <div class="row">
+    <div class="col-xs-7 col-xs-offset-2 calendar-YearMonth" style="width:{{10*(7)}}%;">2018년 8월</div>
+  </div>
+  <div class="row" style="background:#eeeeee">
+    <div class="col-xs-1 col-xs-offset-2 cal-width" style="color:#FF2222; font-weight:800;">Sun</div>
+    <div class="col-xs-1 cal-width">Mon</div>
+    <div class="col-xs-1 cal-width">Tue</div>
+    <div class="col-xs-1 cal-width">Wed</div>
+    <div class="col-xs-1 cal-width">Thr</div>
+    <div class="col-xs-1 cal-width">Fri</div>
+    <div class="col-xs-1 cal-width" style="color:#2222FF; font-weight:800">Sat</div>
+  </div>
+  <table class="weekday">
+    <div class="row day-head">
+      <div class="col-xs-1 col-xs-offset-2 cal-width" style="color:#FF2222; font-weight:800">1</div>
+      <div class="col-xs-1 cal-width">2</div>
+      <div class="col-xs-1 cal-width">3</div>
+      <div class="col-xs-1 cal-width">4</div>
+      <div class="col-xs-1 cal-width">5</div>
+      <div class="col-xs-1 cal-width">6</div>
+      <div class="col-xs-1 cal-width" style="color:#2222FF; font-weight:800">7</div>
+    </div>
+    <div class="row">
+      <div class="col-xs-{{8-4}} col-xs-offset-2 calen-schedule" style="background:#ff6666; width:{{10*(8-4)}}%;">일정예제</div>
+    </div>
+    <div class="row">
+      <div class="col-xs-1 col-xs-offset-2 cal-width calen-schedule" style="background:None">내용</div>
+    </div>
+    <div class="row">
+      <div class="col-xs-1 col-xs-offset-2 cal-width calen-schedule" style="background:#88ffdd">내용aaaaaaaaaaaaaaaaaaaaaaa</div>
+    </div>
+    <div class="row">
+      <div class="col-xs-2 col-xs-offset-2 calen-schedule" style="background:None; width:{{10*(2)}}%;">빈칸</div>
+      <div class="col-xs-{{15-12}} calen-schedule" style="background:#66ff66; width:{{10*(15-12)}}%;">일정예제2</div>
+    </div>
+  </table>
+</div>
+
+<br><br>
