--- a/templates/scheduler.html
+++ b/templates/scheduler.html
@@ -3,8 +3,8 @@
 
 {%block app_content%}
 <div class="row">
-  <div class="col-md-5">
-    <h4>Hello, {{ current_user.username }}! You can recorde your schedules using below form!</h4>
+  <div class="col-md-6">
+    <h4>Hello, {{ current_user.username }}!</h4>
       {{wtf.quick_form(form)}}
     <hr>
   </div>
