--- a/templates/cal_schedule.html
+++ b/templates/cal_schedule.html
@@ -47,8 +47,22 @@
 
     </div>
 
+
     <!-- 입력된 일정 뿌리기  -->
     <div style="height:10em; border-bottom:0.1em solid #ddd; {% if time_now.isocalendar()[:2] == weekdate[1].isocalendar()[:2] %}background-color:#ffeeaa{%endif%}">
+      {%for row in schedules[loop.index-1]%}
+        <div class="row">
+          <div class="col-xs-2"></div>
+          {%for sched in row%}
+            <div class="col-xs-{{sched[0]}} calen-schedule"  style="width:{{10*(sched[0])}}%;"></div>
+            {%set length = (sched[1].period_end-sched[1].period_start).days|int+1%}
+              <div class="col-xs-{{length}} calen-schedule"  style="background:#ff6666; border:1px solid #eee;border-radius:8px; width:{{10*(length)}}%;">
+                {{sched[1].title}}(id:{{sched[1].id}})
+              </div>
+          {%endfor%}
+        </div>
+      {%endfor%}
+
       <div class="row">
         <div class="col-xs-{{8-4}} col-xs-offset-2 calen-schedule" style="background:#ff6666; width:{{10*(8-4)}}%;">일정예제</div>
       </div>
